Fixed homepage text spacing issue

--- a/html/css/index.css
+++ b/html/css/index.css
@@ -1,5 +1,5 @@
 :root {
-  --rowspacing: 125px;
+  --rowspacing: 110px;
   --negative-rowspacing: -125px; 
 }
 
@@ -88,6 +88,7 @@
   justify-content: center;
   max-height: 300px;
   margin-left: var(--rowspacing);
+  margin-right: calc(var(--rowspacing) * -1);
 }
 
 .row.right .text-wrapper .title {
@@ -134,6 +135,7 @@
   justify-content: center;
   max-height: 300px;
   margin-right: var(--rowspacing);
+  margin-left: calc(var(--rowspacing) * -1);
 }
 
 .row.left .text-wrapper .title {
